BGE: Fix T42244 LibLoad crash with logic brick KX_TouchSensor

I remove duplicate and wrong code which treat the special case of KX_TouchSensor.
And Also the re-conversion of linked logic brick.